Actualizacion test de pedidos